# rimg

./: .gitmodules  CMakeLists.txt  cmake_linux.sh  compile_commands.json
src/: main.c
